lessons_vhost/13_devops_way/blue_green_service/bgnginx-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: bgnginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: bgnginx.MY_DOMAIN.TLD
    http:
      paths:
      - backend:
          service:
            name: bgnginx
            port:
              number: 80
        path: /
        pathType: Exact
  ingressClassName: nginx
  tls:
  - hosts:
    - bgnginx.MY_DOMAIN.TLD
    secretName: bgnginx-tls
